Add webrtc function and some tools

--- a/SRE-Computation/cpu-version/mycode/Makefile
+++ b/SRE-Computation/cpu-version/mycode/Makefile
@@ -7,38 +7,28 @@ EXTRA_CXXFLAGS = -Wno-sign-compare
 #EXTRA_CXXFLAGS = -Wno-sign-compare -DGSELECT_TEST
 include ../kaldi.mk
 
-LDFLAGS += $(CUDA_LDFLAGS)
-LDLIBS += $(CUDA_LDLIBS)
+AMRWBINCLUDE = /home/hanyu/Documents/amr/include/opencore-amrwb
+AMRWBLIB = /home/hanyu/Documents/amr/lib
+
+CXXFLAGS += -I$(AMRWBINCLUDE)
+LDLIBS += -Wl,-rpath,$(AMRWBLIB) -lopencore-amrwb
+
 
 #BINFILES = score_dot_product score_plda1 score_plda2 score_plda3 \
 		   wav_ivector pcm_ivector product_float ie_init cuda cuda_test \
 		   my_cuda test_fft
 
-#BINFILES = wav_ivector pcm_ivector cuda cuda_test my_cuda test_fft
-#BINFILES = wav_ivector pcm_ivector cuda_test
-BINFILES = test_vector pcm_ivector
+BINFILES = pcm_ivector wav_ivector vad_test ie_init score_dot_product
 
-#OBJFILES = sre.o
 OBJFILES =
 
 TESTFILES =
 
-%.o : %.cu
-	$(CUDATKDIR)/bin/nvcc -c $< -o $@ $(CUDA_INCLUDE) $(CUDA_FLAGS) $(CUDA_ARCH) -I../
-
-ADDLIBS = ../cudalib/cudalib.a ../mylib/mylib.a ../cudamatrix/kaldi-cudamatrix.a ../feat/kaldi-feat.a \
+ADDLIBS = ../mylib/mylib.a ../cudamatrix/kaldi-cudamatrix.a ../feat/kaldi-feat.a \
 		  ../ivector/kaldi-ivector.a ../transform/kaldi-transform.a ../hmm/kaldi-hmm.a \
 		  ../gmm/kaldi-gmm.a ../matrix/kaldi-matrix.a ../tree/kaldi-tree.a ../thread/kaldi-thread.a \
 		  ../util/kaldi-util.a ../base/kaldi-base.a
 
-#ADDLIBS = ../cudalib/cudalib.a ../mylib/mylib.a  ../cudamatrix/kaldi-cudamatrix.a ../feat/kaldi-feat.a \
-		  ../ivector/kaldi-ivector.a ../transform/kaldi-transform.a ../hmm/kaldi-hmm.a \
-		  ../gmm/kaldi-gmm.a ../tree/kaldi-tree.a ../thread/kaldi-thread.a ../matrix/kaldi-matrix.a \
-		  ../util/kaldi-util.a ../base/kaldi-base.a
-#ADDLIBS = ../feat/kaldi-feat.a ../ivector/kaldi-ivector.a ../hmm/kaldi-hmm.a ../gmm/kaldi-gmm.a \
-    	../tree/kaldi-tree.a ../thread/kaldi-thread.a ../matrix/kaldi-matrix.a \
-    	../util/kaldi-util.a ../base/kaldi-base.a ../mylib/mylib.a \
-		../transform/kaldi-transform.a ../decoder/kaldi-decoder.a ../lat/kaldi-lat.a
 
 include ../makefiles/default_rules.mk
 
