upload sre demo

--- a/sre/config/my.conf
+++ b/sre/config/my.conf
@@ -1,8 +1,12 @@
 [sre]
-logdir = /home/hanyu/server/log/sre/server.log
-wavdir = /home/hanyu/server/wavdir
-ivectordir = /home/hanyu/server/ivectordir
+logdir = /home/gzdinghanyu/server/log/sre/server.log
+wavdir = /home/gzdinghanyu/server/wavdir
+ivectordir = /home/gzdinghanyu/server/ivectordir
 port = 8888
+ubmdir = /home/gzdinghanyu/server/ubm
+validframes = 100
+numthreads = 2
+
 
 [db]
 username = day9011
