--- a/sre/config/my.conf
+++ b/sre/config/my.conf
@@ -6,6 +6,8 @@ port = 8888
 ubmdir = /home/gzdinghanyu/server/ubm
 validframes = 100
 numthreads = 2
+sslkey = /home/gzdinghanyu/ssl/keys/sre-selfsigned.key
+sslcrt = /home/gzdinghanyu/ssl/certs/sre-selfsigned.crt
 
 
 [db]
